Home view without avatar.

--- a/join/home/templates/partials/people.html
+++ b/join/home/templates/partials/people.html
@@ -31,7 +31,7 @@
                     <p class="padding-top-1">{% if user.brief_introduction %}{{ user.brief_introduction }}{% endif %}</p>
                   </div>
                   <div class="overlay"></div>
-                  <img alt="" class="img-responsive" src="{{ user.avatar.url }}"/>
+                  <img alt="" class="img-responsive" src="{{ user.picture.url }}"/>
                 </div>
               </div>
             </div>
