--- a/join/project/templates/project/list.html
+++ b/join/project/templates/project/list.html
@@ -35,7 +35,7 @@
                 <h5 class="text-white">{{ project.title }}</h5>
                 <p class="text-light">{{ project.brief_description }}</p>
               </div>
-              {% thumbnail project.images.first "485x618" crop="center" as im %}
+              {% thumbnail project.images.first.file "485x618" crop="center" as im %}
                 <img src="{{ im.url }}" alt="" class="img-responsive"/>
               {% endthumbnail %}
             </div>
