Slider and home improvements

--- a/join/home/templates/partials/fans.html
+++ b/join/home/templates/partials/fans.html
@@ -1,5 +1,5 @@
 {% load i18n static %}
-<section class="section-side-image section-dark sec-padding clearfix">
+<section class="section-side-image section-dark sec-padding-5 clearfix">
         <div class="img-holder col-md-12 col-sm-3 pull-left">
           <div class="background-imgholder" style="background:url(http://via.placeholder.com/1500x960);"><img alt="" class="nodisplay-image" src="http://via.placeholder.com/1500x960"> </img></div>
         </div>
