--- a/join/home/templates/partials/participate.html
+++ b/join/home/templates/partials/participate.html
@@ -1,14 +1,12 @@
-{% load i18n static %}
-<section class="section-side-image section-light sec-padding clearfix">
-  <div class="img-holder col-md-12 col-sm-12 pull-left">
-    <div class="background-imgholder" style="background:url(http://via.placeholder.com/1500x960);"><img alt="" class="nodisplay-image" src="http://via.placeholder.com/1500x960"> </img></div>
-  </div>
+{% load i18n static core_tags %}
+{% get_photo_url_by_slug "foro-background" as forobackground %}
+<section class="section-side-image section-light sec-padding-5 clearfix" style="background:url({{ forobackground.image.url }});">
   <div class="container">
     <div class="row slide-controls-4">
       <div class="col-sm-12">
-        <div class="sec-title-container text-center">
-          <h5 class="font-weight-4 less-mar-1 line-height-4 montserrat opacity-5">¿Tienes alguna inquietud con respecto a algún tema? Este es tu espacio para compartirlo, no temas a hacer preguntas, de eso se aprende</h5>
-          <h2 class="font-weight-6 less-mar-1 montserrat line-height-5">TU GENENIALIDAD VALE ORO, COMPARTILA<br></h2>
+        <div class="sec-title-container text-center less-padding-5">
+          <h5 class="font-weight-4 less-mar-1 line-height-4 montserrat opacity-5 text-white">¿Tienes alguna inquietud con respecto a algún tema? Este es tu espacio para compartirlo, no temas a hacer preguntas, de eso se aprende</h5>
+          <h2 class="font-weight-6 less-mar-1 montserrat line-height-5 text-white">GENIALIDADES COMPARTIDAS<br></h2>
         </div>
       </div>
       <div class="clearfix"></div>
