--- a/join/home/templates/partials/people.html
+++ b/join/home/templates/partials/people.html
@@ -1,7 +1,7 @@
 {% load i18n static thumbnail core_tags %}
 <section id="people-block" class="section-light">
   <div class="container-fluid" style="padding-left: 0px; padding-right: 0px">
-    {% get_photo_url_by_slug "users-background" as userbackground %}
+    {% get_image_by_slug "users-background" as userbackground %}
     <div class="parallax vertical-align" data-parallax-bg-size="none" data-parallax-bg-image="{{ userbackground.image.url }}" data-parallax-direction="down" data-parallax-speed="0.9">
     <div class="parallax-overlay bg-opacity-8">
       <div id="people-sublock" class="container sec-tpadding-3 sec-bpadding-5">
