--- a/join/home/templates/partials/top_navbar.html
+++ b/join/home/templates/partials/top_navbar.html
@@ -1,4 +1,4 @@
-{% load i18n static %}
+{% load i18n static core_tags %}
 <div class="col-md-12 nopadding">
   <div class="header-section style1 pin-style">
     <div class="container">
@@ -41,9 +41,9 @@
               </ul>
               <div class="collapse" id="menu">
                 <ul class="nav navbar-nav">
-                  <li class="right active"> <a href="/">{% trans "Home" %}</a> <span class="arrow"></span></li>
-                  <li> <a href="{% url "find_users" %}">{% trans "Usuarios" %}</a> <span class="arrow"></span>
-                  <li class="mega-menu"> <a href="{% url "list_project" %}">{% trans "Proyectos" %}</a> <span class="arrow"></span>
+                  <li class="right {% active_menu "home" %}"> <a href="{% url "home_view" %}">{% trans "Home" %}</a> <span class="arrow"></span></li>
+                  <li class="{% active_menu "users" %}"> <a href="{% url "find_users" %}">{% trans "Usuarios" %}</a> <span class="arrow"></span>
+                  <li class="mega-menu {% active_menu "projects" %}"> <a href="{% url "list_project" %}">{% trans "Proyectos" %}</a> <span class="arrow"></span>
                     <ul>
                       <li> <a href="#" title="home samples">{% trans "Filtrar por Estado" %}</a> <span class="arrow"></span>
                         <ul>
@@ -81,9 +81,8 @@
                       </li>
                     </ul>
                   </li>
-
-                  <li> <a href="/">{% trans "Foro" %}</a> <span class="arrow"></span>
-                  <li> <a href="/">{% trans "Noticias" %}</a> <span class="arrow"></span>
+                  <li class="{% active_menu "forum" %}"> <a href="{% url "forum_view" %}">{% trans "Foro" %}</a> <span class="arrow"></span>
+                  <li class="{% active_menu "news" %}"> <a href="{% url "news_view" %}">{% trans "Noticias" %}</a> <span class="arrow"></span>
                 </ul>
               </div>
             </div>
