Fixing background images

--- a/join/home/templates/partials/people.html
+++ b/join/home/templates/partials/people.html
@@ -2,7 +2,7 @@
 <section id="people-block" class="section-light">
   <div class="container-fluid" style="padding-left: 0px; padding-right: 0px">
     {% get_image_by_slug "users-background" as userbackground %}
-    <div class="parallax vertical-align" data-parallax-bg-size="none" data-parallax-bg-image="{{ userbackground.image.url }}" data-parallax-direction="down" data-parallax-speed="0.9">
+    <div class="parallax vertical-align" data-parallax-bg-size="none" data-parallax-bg-image="{{ userbackground.file.url }}" data-parallax-direction="down" data-parallax-speed="0.9">
     <div class="parallax-overlay bg-opacity-8">
       <div id="people-sublock" class="container sec-tpadding-3 sec-bpadding-5">
         <div class="row">
