--- a/join/home/templates/partials/participate.html
+++ b/join/home/templates/partials/participate.html
@@ -1,6 +1,6 @@
 {% load i18n static core_tags %}
 {% get_image_by_slug "foro-background" as forobackground %}
-<section class="section-side-image section-light sec-padding-5 clearfix" style="background:url({{ forobackground.image.url }});">
+<section class="section-side-image section-light sec-padding-5 clearfix" style="background: url({{ forobackground.file.url }});">
   <div class="container">
     <div class="row slide-controls-4">
       <div class="col-sm-12">
